sample-web/dev-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web
spec:
  template:
    spec:
      containers:
        - image: nalbam/sample-web:v0.1.2
          name: sample-web
          resources:
            limits:
              cpu: 120m
              memory: 153Mi
            requests:
              cpu: 100m
              memory: 128Mi
