sample-web/dev-demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: sample-web
    app.kubernetes.io/name: sample-web
  name: sample-web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: sample-web-dev.demo.mzdev.be
      http:
        paths:
          - backend:
              serviceName: sample-web
              servicePort: 80
            path: /
    - host: sample-web-dev.demo.nalbam.com
      http:
        paths:
          - backend:
              serviceName: sample-web
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sample-web-dev.demo.mzdev.be
      secretName: sample-web-mzdev-tls
    - hosts:
        - sample-web-dev.demo.nalbam.com
      secretName: sample-web-nalbam-tls
